# localip_scraping

./: README.md  pyproject.toml
localip_scraping/: ipaddress_scraping_0.0.py
privateip_scraping/linux/: linuxip_scraping.py
privateip_scraping/windows/: ipaddress_scraping.py  winip_scraping.py
t_privateip_scraping/: scraping_linux.py  scraping_windows.py
t_privateip_scraping/linux/: linuxip_scraping.py
