[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privateip_scraping"
version = "1.0.2"
description = "Private IPaddress Scraping"
requires-python = ">=3.0"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "t_argchecksum @ git+https://github.com/tango3304/t_argchecksum.git",
    "scapy",
    "subprocess",
]

[tool.hatch.metadata]
allow-direct-references = true
