[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "t_privateip_scraping"
version = "1.0.2"
description = "Private IPaddress Scraping"
requires-python = ">=3.0"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "tping @ git+https://github.com/tango3304/tping.git",
    "scapy",
]


[tool.setuptools.packages.find]
include = [
    "t_privateip_scraping*",
]
